--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -12,6 +12,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
+    - name: Setup PHP with PECL extension
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '7.4'
+        extensions: imagick, swoole
+
     - uses: actions/checkout@v2
 
     - name: Validate composer.json and composer.lock
@@ -56,7 +63,7 @@ jobs:
         # Space separated list of extensions to configure with the PHP build
 #        php_extensions: # optional
         # The command to run (analyse [default], clear-result-cache, dump-deps, help, list, worker)
-#        command: # default is analyse
+        command: analyse
         # Path(s) with source code to run analysis on
         path: src
         # Configuration file location
@@ -88,17 +95,17 @@ jobs:
       # You may pin to the exact commit or the version.
       # uses: StephaneBour/actions-php-security-checker@7f98a3edeb22cd897f900592481157b4248355d5
       uses: StephaneBour/actions-php-security-checker@1.1
-      with:
+#      with:
         # Path to composer.lock
-        composer-lock: # optional, default is ./composer.lock
+#        composer-lock: # optional, default is ./composer.lock
 
     - name: SonarCloud Scan
       # You may pin to the exact commit or the version.
       # uses: SonarSource/sonarcloud-github-action@de2e56b42aa84d0b1c5b622644ac17e505c9a049
       uses: SonarSource/sonarcloud-github-action@v1.6
-      with:
+#      with:
         # Additional arguments to the sonarcloud scanner
-        args: # optional
+#        args: # optional
         # Set the sonar.projectBaseDir analysis property
 #        projectBaseDir: # optional, default is .
 
