--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -35,6 +35,9 @@ jobs:
 
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
+      
+    - name: provide secrets
+      run: php bin/console secrets:decrypt-to-local --force --env=prod
 
     - name: php-codesniffer
       # You may pin to the exact commit or the version.
