--- a/.env
+++ b/.env
@@ -21,4 +21,5 @@ APP_ENV=prod
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
+DATABASE_URL=""
 ###< doctrine/doctrine-bundle ###
