--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -39,7 +39,7 @@ jobs:
     - name: provide secrets
       env:
         SYMFONY_DECRYPTION_SECRET: ${{ secrets.SYMFONY_DECRYPTION_SECRET }}
-      run: php bin/console secrets:decrypt-to-local --force --env=prod
+      run: env && php bin/console secrets:decrypt-to-local --force --env=prod
 
     - name: php-codesniffer
       # You may pin to the exact commit or the version.
