--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,10 @@
     "require": {
         "php": "^7.4",
         "ext-ctype": "*",
+        "ext-dom": "20031129",
         "ext-iconv": "*",
         "ext-mbstring": "*",
+        "ext-xml": "*",
         "ext-zip": "*",
         "composer-runtime-api": "^2.0",
         "friendsofsymfony/ckeditor-bundle": "^2.1",
@@ -36,6 +38,11 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
         "mikey179/vfsstream": "^1.6",
+        "phpstan/extension-installer": "^1.1",
+        "phpstan/phpstan": "^0.12.88",
+        "phpstan/phpstan-doctrine": "^0.12.37",
+        "phpstan/phpstan-phpunit": "^0.12.19",
+        "phpstan/phpstan-symfony": "^0.12.33",
         "squizlabs/php_codesniffer": "^3.6",
         "symfony/browser-kit": "^5.2",
         "symfony/css-selector": "^5.2",
@@ -68,6 +75,12 @@
         "symfony/polyfill-php56": "*"
     },
     "scripts": {
+        "phpstan": "phpstan analyse -c phpstan.neon src tests --level 7 --no-progress",
+        "tests": "phpunit",
+        "ci": [
+            "@phpstan",
+            "@tests"
+        ],
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd",
