--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -35,7 +35,7 @@ jobs:
 
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
-      
+
     - name: provide secrets
       env:
         SYMFONY_DECRYPTION_SECRET: ${{ secrets.SYMFONY_DECRYPTION_SECRET }}
@@ -56,37 +56,37 @@ jobs:
     # - name: Run test suite
     #   run: composer run-script test
 
-    - name: PHPStan (php-actions)
-      # You may pin to the exact commit or the version.
-      # uses: php-actions/phpstan@e1ce60d6e66d508e78ddeefac1ec81570b8ef27d
-      uses: php-actions/phpstan@v2
-      with:
-        # What version of PHPStan to use
-#        version: # optional, default is latest
-        # What version of PHP to use
-#        php_version: # optional, default is latest
-        # Space separated list of extensions to configure with the PHP build
-#        php_extensions: # optional
-        # The command to run (analyse [default], clear-result-cache, dump-deps, help, list, worker)
-        command: analyse
-        # Path(s) with source code to run analysis on
-        path: src
-        # Configuration file location
-#        configuration: # optional
-        # Level of rule options - the higher, the stricter
-#        level: # optional
-        # Path to a file with a list of paths to run analysis on
-#        paths_file: # optional
-        # Project's additional autoload file path
-#        autoload_file: # optional
-        # Format in which to print the result of the analysis
-#        error_format: # optional
-        # Path to a file where the baseline should be saved
-#        generate_baseline: # optional
-        # Memory limit for analysis
-#        memory_limit: # optional
-        # Extra arguments to pass to the phpstan binary
-#        args: # optional
+#    - name: PHPStan (php-actions)
+#      # You may pin to the exact commit or the version.
+#      # uses: php-actions/phpstan@e1ce60d6e66d508e78ddeefac1ec81570b8ef27d
+#      uses: php-actions/phpstan@v2
+#      with:
+#        # What version of PHPStan to use
+##        version: # optional, default is latest
+#        # What version of PHP to use
+##        php_version: # optional, default is latest
+#        # Space separated list of extensions to configure with the PHP build
+##        php_extensions: # optional
+#        # The command to run (analyse [default], clear-result-cache, dump-deps, help, list, worker)
+#        command: analyse
+#        # Path(s) with source code to run analysis on
+#        path: src
+#        # Configuration file location
+##        configuration: # optional
+#        # Level of rule options - the higher, the stricter
+##        level: # optional
+#        # Path to a file with a list of paths to run analysis on
+##        paths_file: # optional
+#        # Project's additional autoload file path
+##        autoload_file: # optional
+#        # Format in which to print the result of the analysis
+##        error_format: # optional
+#        # Path to a file where the baseline should be saved
+##        generate_baseline: # optional
+#        # Memory limit for analysis
+##        memory_limit: # optional
+#        # Extra arguments to pass to the phpstan binary
+##        args: # optional
 
     - name: PHP Code Style Fixer (php-cs-fixer)
       # You may pin to the exact commit or the version.
