--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -108,6 +108,8 @@ jobs:
 #        composer-lock: # optional, default is ./composer.lock
 
     - name: SonarCloud Scan
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       # You may pin to the exact commit or the version.
       # uses: SonarSource/sonarcloud-github-action@de2e56b42aa84d0b1c5b622644ac17e505c9a049
       uses: SonarSource/sonarcloud-github-action@v1.6
