adjust sonar config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # Required metadata
-sonar.projectKey=byte-artist
+sonar.projectKey=mastercad_byte-artist
 sonar.projectName=byte-artist
 sonar.projectVersion=1.0
 sonar.organization=byte-artist
@@ -9,7 +9,7 @@ sonar.organization=byte-artist
 # Since SonarQube 4.2, this property is optional if sonar.modules is set.
 # If not set, SonarQube starts looking for source code from the directory containing
 # the sonar-project.properties file.
-#sonar.sources=D:/eclipse workspace/NoSqlDataModeling
+sonar.sources=./src
 
 #Comma-separated paths to directories containing the binary files (directories with class files, in the case of Java).
 #sonar.binaries=D:/eclipse workspace/NoSqlDataModeling/build/classes
@@ -18,7 +18,7 @@ sonar.organization=byte-artist
 #sonar.libraries=D:/eclipse workspace/NoSqlDataModeling/WebContent/WEB-INF/lib/*.jar
 
 #language used
-#sonar.language=java
+sonar.language=php
 
 # Encoding of the source code
 #sonar.sourceEncoding=UTF-8
