adjust sonarcloud source

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@
 sonar.projectKey=mastercad_byte-artist
 sonar.projectName=byte-artist
 sonar.projectVersion=1.0
-sonar.organization=byte-artist
+sonar.organization=mastercad
 
 # Path to the parent source code directory.
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
