--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,7 +17,7 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: '7.4'
-        extensions: imagick, swoole
+        extensions: imagick, swoole, zip, unzip
 
     - uses: actions/checkout@v2
 
