--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,7 +17,7 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: '7.4'
-        extensions: imagick, swoole, zip, unzip
+        extensions: imagick, swoole, zip, mbstring, xml, ctype, iconv, intl, pdo_sqlite, dom, filter, gd, json, pdo
 
     - uses: actions/checkout@v2
 
@@ -40,6 +40,17 @@ jobs:
       env:
         SYMFONY_DECRYPTION_SECRET: ${{ secrets.SYMFONY_DECRYPTION_SECRET }}
       run: php bin/console secrets:decrypt-to-local --force --env=prod
+
+    - name: Check that environment is configured correctly
+      run: php ./vendor/bin/requirements-checker
+
+    - name: PHP Security Checker
+      # You may pin to the exact commit or the version.
+      # uses: StephaneBour/actions-php-security-checker@7f98a3edeb22cd897f900592481157b4248355d5
+      uses: StephaneBour/actions-php-security-checker@1.1
+#      with:
+        # Path to composer.lock
+#        composer-lock: # optional, default is ./composer.lock
 
     - name: prepare php-cs-fixer config
       run: cp .php-cs-fixer.dist.php .php-cs-fixer.php
@@ -99,14 +110,6 @@ jobs:
         # Folder to check code style
         dir: src
 
-    - name: PHP Security Checker
-      # You may pin to the exact commit or the version.
-      # uses: StephaneBour/actions-php-security-checker@7f98a3edeb22cd897f900592481157b4248355d5
-      uses: StephaneBour/actions-php-security-checker@1.1
-#      with:
-        # Path to composer.lock
-#        composer-lock: # optional, default is ./composer.lock
-
     - name: PHPUnit for Symfony
       # You may pin to the exact commit or the version.
       # uses: chindit/actions-phpunit-symfony@c02bff1f84d757d030c15e2985be601cdba3039e
@@ -124,3 +127,11 @@ jobs:
 #        args: # optional
         # Set the sonar.projectBaseDir analysis property
 #        projectBaseDir: # optional, default is .
+
+    - name: Git Release
+      # You may pin to the exact commit or the version.
+      # uses: anton-yurchenko/git-release@7a1349223bc56b846390a268b5c9948d8db70e7d
+      uses: anton-yurchenko/git-release@v3.4.4
+#      with:
+        # Release Assets
+#        args: # optional
