add GITHUB_TOKEN to release action

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -129,6 +129,8 @@ jobs:
 #        projectBaseDir: # optional, default is .
 
     - name: Git Release
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # You may pin to the exact commit or the version.
       # uses: anton-yurchenko/git-release@7a1349223bc56b846390a268b5c9948d8db70e7d
       uses: anton-yurchenko/git-release@v3.4.4
