--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -3,8 +3,12 @@ name: PHP Composer
 on:
   push:
     branches: [ main ]
+    tags:
+    - 'v*'
   pull_request:
     branches: [ main ]
+    tags:
+    - 'v*'
 
 jobs:
   build:
