--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -2,8 +2,7 @@ name: Bump version
 
 on:
   push:
-    branches:
-      - master
+    branches: [ main ]
 jobs:
   build:
     runs-on: ubuntu-latest
