--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -10,8 +10,15 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: '2'
+#    - name: Bump version and push tag
+#      uses: anothrNick/github-tag-action@1.26.0
+#      env:
+#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        WITH_V: true
     - name: Bump version and push tag
+      if: ${{ github.event_name == 'push' && runner.os == 'Linux' && matrix.java == '11' }}
       uses: anothrNick/github-tag-action@1.26.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         WITH_V: true
+
