--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -16,7 +16,7 @@ jobs:
 #        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 #        WITH_V: true
     - name: Bump version and push tag
-      if: ${{ github.event_name == 'push' && runner.os == 'Linux' && matrix.java == '11' }}
+#      if: ${{ github.event_name == 'push' && runner.os == 'Linux' && matrix.java == '11' }}
       uses: anothrNick/github-tag-action@1.26.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
