--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
+          automatic_release_tag: latest
           files: |
             LICENSE.txt
             *.jar
