--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,6 +1,7 @@
 parameters:
     autoload_files:
         - vendor/autoload.php
+        - bin/.phpunit/phpunit/vendor/autoload.php
     symfony:
         container_xml_path: var/cache/dev/App_KernelDevDebugContainer.xml
         console_application_loader: build/phpstan/console-loader.php
