--- a/.github/workflows/quality_assurance.yml
+++ b/.github/workflows/quality_assurance.yml
@@ -2,17 +2,17 @@ name: PHP Composer
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-
     - name: Setup PHP with PECL extension
       uses: shivammathur/setup-php@v2
       with:
