name jobs in workflows

--- a/.github/workflows/tag_release.yml
+++ b/.github/workflows/tag_release.yml
@@ -7,8 +7,8 @@ on:
       - "v*"
 
 jobs:
-  tagged-release:
-    name: "Tagged Release"
+  tag-release:
+    name: "Tag Release"
     runs-on: "ubuntu-latest"
 
     steps:
