--- a/.github/workflows/quality_assurance.yml
+++ b/.github/workflows/quality_assurance.yml
@@ -1,4 +1,4 @@
-name: Quality Assurance
+name: "Quality Assurance"
 
 on:
   push:
@@ -10,6 +10,7 @@ on:
 
 jobs:
   quality-assurance:
+    name: "Quality Assurance"
     runs-on: ubuntu-latest
 
     steps:
