--- a/.github/workflows/deploy_application.yml
+++ b/.github/workflows/deploy_application.yml
@@ -24,11 +24,11 @@ jobs:
 
     - name: Install assets
       run: |
-        bin/console assets:install public
+        php bin/console assets:install public
 
     - name: Install ckeditor
       run: |
-        bin/console ckeditor:install --clear=drop
+        php bin/console ckeditor:install --clear=drop
 
     - name: Cache node_modules
       uses: actions/cache@v1
