--- a/.github/workflows/deploy_application.yml
+++ b/.github/workflows/deploy_application.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Composer install
       run: |
-        composer install --no-dev --no-interaction --prefer-dist
+        composer install --no-dev --no-interaction --prefer-dist --no-progress
 
     - name: Install assets
       run: |
@@ -28,7 +28,7 @@ jobs:
 
     - name: Install ckeditor
       run: |
-        php bin/console ckeditor:install public --clear=drop --release=custom --custom-build-id=0097efeeee383ee7fcc427e86e6f0229
+        php bin/console ckeditor:install public/build/ckeditor --clear=drop --release=custom --custom-build-id=0097efeeee383ee7fcc427e86e6f0229
 
     - name: Cache node_modules
       uses: actions/cache@v1
@@ -59,7 +59,7 @@ jobs:
     - name: Create deployment artifact
       env:
         GITHUB_SHA: ${{ github.sha }}
-      run: tar -czf "${GITHUB_SHA}".tar.gz --exclude=*.git --exclude=node_modules --exclude=tests --exclude=var --exclude=assets --exclude=.github --exclude=build --exclude=.docker --exclude=docker-compose.yml --exclude=phpcs.xml.dist --exclude=phpmd.xml --exclude=phpstan.neon --exclude=phpstan-tests.neon --exclude=phpunit.xml.dist *
+      run: tar -czf "${GITHUB_SHA}".tar.gz --exclude=*.git --exclude=node_modules --exclude=tests --exclude=var --exclude=assets --exclude=.github --exclude=./build --exclude=.docker --exclude=docker-compose.yml --exclude=phpcs.xml.dist --exclude=phpmd.xml --exclude=phpstan.neon --exclude=phpstan-tests.neon --exclude=phpunit.xml.dist *
 
     - name: Store artifact for distribution
       uses: actions/upload-artifact@v2
