--- a/.github/workflows/deploy_application.yml
+++ b/.github/workflows/deploy_application.yml
@@ -59,10 +59,10 @@ jobs:
     - name: Create deployment artifact
       env:
         GITHUB_SHA: ${{ github.sha }}
-      run: tar -cpzf "${GITHUB_SHA}".tar.gz --exclude=*.git --exclude=node_modules --exclude=tests --exclude=var --exclude=assets --exclude=./build --exclude=.docker --exclude=docker-compose.yml --exclude=phpcs.xml.dist --exclude=phpmd.xml --exclude=phpstan.neon --exclude=phpstan-tests.neon --exclude=phpunit.xml.dist --exclude="${GITHUB_SHA}".tar.gz .
+      run: tar -cpzf /tmp/"${GITHUB_SHA}".tar.gz --exclude=.git* --exclude=node_modules --exclude=tests --exclude=var --exclude=assets --exclude=./build --exclude=.docker --exclude=docker-compose.yml --exclude=phpcs.xml.dist --exclude=phpmd.xml --exclude=phpstan.neon --exclude=phpstan-tests.neon --exclude=phpunit.xml.dist --exclude="${GITHUB_SHA}".tar.gz .
 
     - name: Store artifact for distribution
       uses: actions/upload-artifact@v2
       with:
         name: app-build
-        path: ${{ github.sha }}.tar.gz
+        path: /tmp/${{ github.sha }}.tar.gz
