--- a/.github/workflows/deploy_application.yml
+++ b/.github/workflows/deploy_application.yml
@@ -1,7 +1,8 @@
 name: Deploy Application
 
 on:
-  push:
+  pull_request:
+    types: [closed]
     branches: [ main ]
 
 jobs:
@@ -9,6 +10,7 @@ jobs:
     name: Create deployment artifacts
     runs-on: ubuntu-latest
 
+    if: github.event.pull_request.merged
     steps:
     - name: Configure PHP 7.4
       uses: shivammathur/setup-php@master
@@ -19,16 +21,13 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Composer install
-      run: |
-        composer install --no-dev --no-interaction --prefer-dist --no-progress
+      run: composer install --no-dev --no-interaction --prefer-dist --no-progress
 
     - name: Install assets
-      run: |
-        php bin/console assets:install public
+      run: php bin/console assets:install public
 
     - name: Install ckeditor
-      run: |
-        php bin/console ckeditor:install public/build/ckeditor --clear=drop --release=custom --custom-build-id=0097efeeee383ee7fcc427e86e6f0229
+      run: php bin/console ckeditor:install public/build/ckeditor --clear=drop --release=custom --custom-build-id=0097efeeee383ee7fcc427e86e6f0229
 
     - name: Cache node_modules
       uses: actions/cache@v1
@@ -59,7 +58,7 @@ jobs:
     - name: Create deployment artifact
       env:
         GITHUB_SHA: ${{ github.sha }}
-      run: tar -cpzf /tmp/"${GITHUB_SHA}".tar.gz --one-file-system --exclude=.git* --exclude=node_modules --exclude=tests --exclude=var --exclude=assets --exclude=./build --exclude=.docker --exclude=docker-compose.yml --exclude=phpcs.xml.dist --exclude=phpmd.xml --exclude=phpstan.neon --exclude=phpstan-tests.neon --exclude=phpunit.xml.dist .
+      run: tar -cpzf /tmp/"${GITHUB_SHA}".tar.gz --one-file-system --exclude=.git* --exclude=node_modules --exclude=tests --exclude=var --exclude=assets --exclude=./build --exclude=.docker --exclude=docker-compose.yml --exclude=phpcs.xml* --exclude=phpmd.xml --exclude=phpstan* --exclude=phpunit.xml* --exclude=.php-cs* --exclude=sonar-project.properties .
 
     - name: Store artifact for distribution
       uses: actions/upload-artifact@v2
