--- a/.github/workflows/quality_assurance.yml
+++ b/.github/workflows/quality_assurance.yml
@@ -158,6 +158,13 @@ jobs:
 #        # GitHub Access Token
 #        token: ${{ github.token }} # optional, default is ${{ github.token }}
 
+    - name: Upload Unit Test Results
+      if: always()
+      uses: actions/upload-artifact@v2
+      with:
+        name: Unit Test Results
+        path: build/reports/junit.xml
+
     - name: Publish Unit Test Results
       uses: EnricoMi/publish-unit-test-result-action@v1
       if: always()
