--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -56,7 +56,7 @@
         <log type="coverage-clover" target="build/reports/coverage-clover.xml"/>
         <log type="coverage-php" target="build/reports/coverage.serialized"/>
 <!--        <log type="coverage-text" target="php://stdout" showUncoveredFiles="false"/> -->
-        <log type="junit" target="build/reports/juinit.xml"/>
+        <log type="junit" target="build/reports/junit.xml"/>
         <log type="testdox-html" target="build/reports/testdox.html"/>
         <log type="testdox-text" target="build/reports/testdox.txt"/>
     </logging>
