remove target path now before upload with deployment workflow

--- a/.github/workflows/deploy_application.yml
+++ b/.github/workflows/deploy_application.yml
@@ -99,6 +99,7 @@ jobs:
           port: ${{ matrix.server.port }}
           source: ${{ github.sha }}.tar.gz
           target: ${{ matrix.server.path }}/artifacts
+          rm: true
           overwrite: true
 
       - name: Extract archive and create directories
