add debug output to upload step for deployment workflow

--- a/.github/workflows/deploy_application.yml
+++ b/.github/workflows/deploy_application.yml
@@ -99,6 +99,8 @@ jobs:
           port: ${{ matrix.server.port }}
           source: ${{ github.sha }}.tar.gz
           target: ${{ matrix.server.path }}/artifacts
+          debug: true
+          rm: true
           overwrite: true
 
       - name: Extract archive and create directories
@@ -221,4 +223,4 @@ jobs:
           envs: RELEASES_PATH
           script: |
             cd $RELEASES_PATH && ls -t -1 | tail -n +6 | xargs rm -rf
-            rm -rf $ARTIFACTS_PATH
+            cd $ARTIFACTS_PATH && ls -t -1 | tail -n +6 | xargs rm -rf
