--- a/.github/workflows/deploy_application.yml
+++ b/.github/workflows/deploy_application.yml
@@ -89,19 +89,31 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: app-build
-      - name: Upload
-        uses: appleboy/scp-action@master
+
+#      - name: Upload
+#        uses: appleboy/scp-action@master
+#        with:
+#          host: ${{ matrix.server.ip }}
+#          username: ${{ matrix.server.username }}
+#          password: ${{ secrets.WEB_USER_PASSWORD }}
+##          key: ${{ secrets.SSH_KEY }}
+#          port: ${{ matrix.server.port }}
+#          source: ${{ github.sha }}.tar.gz
+#          target: ${{ matrix.server.path }}/artifacts
+#          debug: true
+#          rm: true
+#          overwrite: true
+
+      - name: Publish
+        uses: nogsantos/scp-deploy@master
         with:
+          src: ${{ github.sha }}.tar.gz
           host: ${{ matrix.server.ip }}
-          username: ${{ matrix.server.username }}
-          password: ${{ secrets.WEB_USER_PASSWORD }}
-#          key: ${{ secrets.SSH_KEY }}
+          remote: ${{ matrix.server.path }}/artifacts
           port: ${{ matrix.server.port }}
-          source: ${{ github.sha }}.tar.gz
-          target: ${{ matrix.server.path }}/artifacts
-          debug: true
-          rm: true
-          overwrite: true
+          user: ${{ matrix.server.username }}
+#          key: ${{ secrets.SSH_KEY }}
+          password: ${{ secrets.WEB_USER_PASSWORD }}
 
       - name: Extract archive and create directories
         uses: appleboy/ssh-action@master
