--- a/public/.htaccess
+++ b/public/.htaccess
@@ -7,7 +7,7 @@ AddHandler x-httpd-php7.2 .php
 # to each configured DirectoryIndex file (e.g. index.php, index.html, index.pl).
 DirectoryIndex index.php
 
-Options +FollowSymlinks
+Options +FollowSymlinks +ExecCGI +FollowSymlinks -SymLinksIfOwnerMatch
 
 # By default, Apache does not evaluate symbolic links if you did not enable this
 # feature in your server configuration. Uncomment the following line if you
