--- a/.github/workflows/deploy_application.yml
+++ b/.github/workflows/deploy_application.yml
@@ -120,7 +120,7 @@ jobs:
             export SYMFONY_DECRYPTION_SECRET=${{ secrets.SYMFONY_DECRYPTION_SECRET }} && "${{ matrix.server.path }}/releases/${GITHUB_SHA}/bin/console" secrets:decrypt-to-local --force --env=prod
             rm -rf "${{ matrix.server.path }}/releases/${GITHUB_SHA}/var/log
             rm -rf "${{ matrix.server.path }}/releases/${GITHUB_SHA}/public/images/content/dynamisch
-            rm -rf "${{ matrix.server.path }}/releases/${GITHUB_SHA}/upload
+            rm -rf "${{ matrix.server.path }}/releases/${GITHUB_SHA}/public/upload
 
 #            rm -rf ${{ matrix.server.path }}/releases/${GITHUB_SHA}/storage
 
