--- a/.github/workflows/deploy_application.yml
+++ b/.github/workflows/deploy_application.yml
@@ -118,9 +118,9 @@ jobs:
             tar xzf ${{ matrix.server.path }}/artifacts/${GITHUB_SHA}.tar.gz -C "${{ matrix.server.path }}/releases/${GITHUB_SHA}"
             chmod +x "${{ matrix.server.path }}/releases/${GITHUB_SHA}/bin/console"
             export SYMFONY_DECRYPTION_SECRET=${{ secrets.SYMFONY_DECRYPTION_SECRET }} && "${{ matrix.server.path }}/releases/${GITHUB_SHA}/bin/console" secrets:decrypt-to-local --force --env=prod
-            rm -rf "${{ matrix.server.path }}/releases/${GITHUB_SHA}/var/log
-            rm -rf "${{ matrix.server.path }}/releases/${GITHUB_SHA}/public/images/content/dynamisch
-            rm -rf "${{ matrix.server.path }}/releases/${GITHUB_SHA}/public/upload
+            rm -rf "${{ matrix.server.path }}/releases/${GITHUB_SHA}/var/log"
+            rm -rf "${{ matrix.server.path }}/releases/${GITHUB_SHA}/public/images/content/dynamisch"
+            rm -rf "${{ matrix.server.path }}/releases/${GITHUB_SHA}/public/upload"
 
 #            rm -rf ${{ matrix.server.path }}/releases/${GITHUB_SHA}/storage
 
