--- a/.github/workflows/deploy_application.yml
+++ b/.github/workflows/deploy_application.yml
@@ -181,10 +181,10 @@ jobs:
           port: ${{ matrix.server.port }}
           envs: GITHUB_SHA,RELEASE_PATH,ACTIVE_RELEASE_PATH,BASE_PATH,ENV_PATH
           script: |
-            ln -s -n -f $ACTIVE_RELEASE_PATH/var/log $BASE_PATH/var/log/
-            ln -s -n -f $ACTIVE_RELEASE_PATH/public/images/content/dynamisch $BASE_PATH/public/images/content/dynamisch/
-            ln -s -n -f $ACTIVE_RELEASE_PATH/public/upload $BASE_PATH/public/upload/
-            ln -s -n -f $RELEASE_PATH $ACTIVE_RELEASE_PATH
+            ln -s -n -f "$BASE_PATH/var/log" "$ACTIVE_RELEASE_PATH/var/"
+            ln -s -n -f "$BASE_PATH/public/images/content/dynamisch" "$ACTIVE_RELEASE_PATH/public/images/content/"
+            ln -s -n -f "$BASE_PATH/public/upload" "$ACTIVE_RELEASE_PATH/public/"
+            ln -s -n -f "$RELEASE_PATH" "$ACTIVE_RELEASE_PATH"
 
   run-after-hooks:
     name: "${{ matrix.server.name }}: After hook"
